@@ -5,9 +5,7 @@
 // Origin:  Andrew Pinski pinskia@gcc.gnu.org
 
 // NOTE: This test assumes packed structure layout differs from unpacked
-//       structure layout.  This isn't true, e.g., with the default
-//       arm-none-elf options.
-// { dg-options "-mstructure-size-boundary=8" { target arm*-*-* } }
+//       structure layout.
 
 struct a
 {
